crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@parallel_two.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
expression: trace
input_file: crates/barnum_engine/tests/completion/parallel_two.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                All {
                    count: Count(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: All {
                            results: [
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 1,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 3,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
        TaskId(
            1,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
    },
    pending_effects: [],
    next_task_id: 2,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: Null,
    },
    DispatchEvent {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: Null,
    },
]

--- Completion: task_id=1, value="b_result" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                All {
                    count: Count(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: All {
                            results: [
                                None,
                                Some(
                                    String("b_result"),
                                ),
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 2,
        first_free: Some(
            FreePointer(2),
        ),
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
    },
    pending_effects: [],
    next_task_id: 2,
}
Pending: []

--- Completion: task_id=0, value="a_result" ---
Result: Some(Array [String("a_result"), String("b_result")])
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                All {
                    count: Count(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: Some(
                        FreePointer(1),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: Some(
                        FreePointer(2),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_effects: [],
    next_task_id: 2,
}
Pending: []
