crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@single_invoke.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
assertion_line: 68
expression: trace
input_file: crates/barnum_engine/tests/completion/single_invoke.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {},
    task_to_parent: {
        TaskId(
            0,
        ): None,
    },
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: Object {
            "x": Number(1),
        },
    },
]

--- Completion: task_id=0, value="result" ---
Result: Some(String("result"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {},
    task_to_parent: {},
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: []
