crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@step_named.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
expression: trace
input_file: crates/barnum_engine/tests/completion/step_named.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Step {
                    target: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 0,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("input"),
    },
]

--- Completion: task_id=0, value="result" ---
Result: Some(String("result"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Step {
                    target: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: []
